[gd_scene load_steps=10 format=3 uid="uid://cmtnhqujxf0cv"]

[ext_resource type="Script" path="res://Scenes/Items/Bounce_PowerUp.gd" id="1_tmfx3"]
[ext_resource type="Texture2D" uid="uid://djx6l75dlp52m" path="res://textures/Items/Bounce_PowerUp.png" id="2_jwnvm"]
[ext_resource type="Texture2D" uid="uid://c4c0tho7pwwrv" path="res://textures/inputs/spacebar.png" id="3_700y1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7shwc"]
radius = 9.0

[sub_resource type="Animation" id="Animation_o7cos"]
resource_name = "Basic"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.08165e-12, -3)]
}

[sub_resource type="Animation" id="Animation_e2nk6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../InputSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../InputSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_6eaht"]
resource_name = "spacebar_appear"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../InputSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, -22)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../InputSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_04kuc"]
resource_name = "spacebar_dissappear"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../InputSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(2.08165e-12, -22), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../InputSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ega3e"]
_data = {
"Basic": SubResource("Animation_o7cos"),
"RESET": SubResource("Animation_e2nk6"),
"spacebar_appear": SubResource("Animation_6eaht"),
"spacebar_dissappear": SubResource("Animation_04kuc")
}

[node name="Dash_PowerUp" type="Node2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(3.14763e-13, -0.453625)
script = ExtResource("1_tmfx3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jwnvm")

[node name="InputSprite" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("3_700y1")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7shwc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_ega3e")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
